Added a new recipe and made minor changes in other pages
I added a new recipe to the recipe site where I stated the description, ingredients, and steps in making a burger.
The recipe was detailed in a way so that it was flexible for the person making the dish to use any ingredients that were available to them.
Minor changes were made to other pages including punctuation and adding links to the newly added recipes in index.html.
One more recipe will soon follow.

--- a/recipes/rice-bowl.html
+++ b/recipes/rice-bowl.html
@@ -22,8 +22,8 @@
         <h2>Steps:</h2>
         <ol>
             <li>Cook the rice until cooked</li>
-            <li>Fry the proteins on the pan and add whatever spices and/or sauces you'd like (I would use Japanese Barbeque Sauce)</li>
-            <li>Grab your avocado and face it horizontally and start making small cuts along the avocado</li>
+            <li>Fry the proteins on the pan and add whatever spices and/or sauces you'd like (I would use Japanese Barbeque Sauce).</li>
+            <li>Grab your avocado and face it horizontally and start making small cuts along the avocado.</li>
             <li>After cutting it, press the avocado down to flatten the slices together.</li>
             <li>Grab your favorite bowl and apply as much rice as you want, then get the protein on there and place the avocado on the side.</li>
             <li>Enjoy!</li>
