--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <ul>
             <li><a href="recipes/rice-bowl.html">Rice Bowl</a></li>
             <li><a href="recipes/burger.html">Burger</a></li>
+            <li><a href="recipes/pasta.html">Pasta</a></l>
         </ul>
         
     </body>
